[package]
name = "quanweb"
version = "1.3.0"
edition = "2021"
rust-version = "1.76"
default-run = "quanweb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "debuginfo"

[dependencies]
ammonia = "4.0.0"
async-trait = "0.1.82"
atom_syndication = { version = "0.12.4", features = ["serde"] }
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3" }
axum-login = "0.15.3"
chrono = { version = "0.4.38", features = [
    "serde",
    "std",
], default-features = false }
chrono-tz = "0.9.0"
clap = { version = "4.4.7", features = ["derive"] }
comrak = "0.27.0"
config = { version = "0.14.0", default-features = false, features = [
    "indexmap",
    "toml",
] }
djangohashers = { version = "1.7.3", default-features = false, features = [
    "with_argon2",
] }
edgedb-derive = "0.5.2"
edgedb-errors = { version = "0.4.2", features = ["miette"] }
edgedb-protocol = { version = "0.6.1", features = ["all-types"] }
edgedb-tokio = { version = "0.5.1", features = ["serde_json", "miette-errors"] }
field_names = "0.2.0"
fluent-bundle = "0.15.3"
fluent-templates = "0.10.1"
fred = { version = "8.0.2", features = ["tracing"] }
http = "1.1.0"
indexmap = { version = "2.5.0", features = ["serde"] }
libpassgen = "1.0.3"
miette = { version = "7.0.0", features = ["fancy", "serde"] }
mime_guess = "2.0.5"
minijinja = { version = "2.2.0", features = ["loader", "internal_debug"] }
once_cell = "1.18.0"
querystring_tiny = "0.2.1"
redact = { version = "0.1.1", features = ["serde"] }
regex = "1.10.6"
rust-embed = { version = "8.5.0", features = [
    "axum",
    "mime-guess",
    "include-exclude",
] }
serde = { version = "1.0.209", features = ["serde_derive"] }
serde-value = "0.7.0"
serde_json = "1.0.127"
serde_json5 = "0.1.0"
serde_with = "3.9.0"
smart-default = "0.7.1"
str-macro = "1.0.0"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
syntect = { version = "5.0.0", default-features = false, features = [
    "fancy-regex",
    "html",
] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.0", features = ["tokio", "tracing"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tower-sessions = "0.12.3"
tower-sessions-redis-store = "0.13.0"
tracing = "0.1.40"
tracing-journald = "0.3.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
two-face = { version = "0.4.0", default-features = false, features = [
    "syntect-fancy",
] }
unic-langid = { version = "0.9.5", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v1", "serde"] }
validify = "1.4.0"

[dev-dependencies]
nonzero = "0.2.0"

[build-dependencies]
crate-git-revision = "0.0.6"

[patch.crates-io]
edgedb-derive = { git = "https://github.com/edgedb/edgedb-rust.git", rev = "9025de8" }
edgedb-errors = { git = "https://github.com/edgedb/edgedb-rust.git", rev = "9025de8" }
edgedb-protocol = { git = "https://github.com/edgedb/edgedb-rust.git", rev = "9025de8" }
edgedb-tokio = { git = "https://github.com/edgedb/edgedb-rust.git", rev = "9025de8" }
