[package]
name = "quanweb"
version = "1.6.0"
edition = "2024"
rust-version = "1.85"
default-run = "quanweb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "debuginfo"

[dependencies]
ammonia = "4.1.0"
atom_syndication = { version = "0.12.7", features = ["serde"] }
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.12.0", features = ["with-rejection"] }
axum-login = "0.18.0"
chrono = { version = "0.4.42", features = [
    "serde",
    "std",
], default-features = false }
chrono-tz = "0.10.4"
clap = { version = "4.5.20", features = ["derive"] }
comrak = "0.47.0"
config = { version = "0.15.11", default-features = false, features = [
    "indexmap",
    "toml",
] }
djangohashers = { version = "1.7.4", default-features = false, features = [
    "with_argon2",
] }
field_access = "0.1.11"
field_names = "0.2.0"
fluent-bundle = "0.16.0"
fluent-templates = "0.13.2"
fred = { version = "10.1.0", features = ["tracing"] }
gel-derive = "0.7.4"
gel-errors = { version = "0.5.4", features = ["miette"] }
gel-protocol = { version = "0.9.2", features = ["all-types"] }
gel-tokio = { version = "0.11.0", features = ["miette-errors"] }
http = "1.3.1"
indexmap = { version = "2.11.4", features = ["serde"] }
libpassgen = "1.0.3"
miette = { version = "7.6.0", features = ["fancy", "serde"] }
mime_guess = "2.0.5"
minijinja = { version = "2.12.0", features = ["loader", "internal_debug"] }
querystring_tiny = "0.2.1"
redact = { version = "0.1.11", features = ["serde"] }
regex = "1.11.3"
rust-embed = { version = "8.7.2", features = [
    "axum",
    "mime-guess",
    "include-exclude",
] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde-value = "0.7.0"
serde_json = "1.0.145"
serde_json5 = "0.2.1"
serde_with = "3.14.1"
sitemap-writer = "1.0.1"
slugrs = "0.5.0"
smallvec = "1.13.2"
smart-default = "0.7.1"
str-macro = "1.0.0"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
syntect = { version = "5.2.0", default-features = false, features = [
    "fancy-regex",
    "html",
] }
thiserror = "2.0.16"
tokio = { version = "1.45.0", features = ["full"] }
tower = { version = "0.5.2", features = ["tokio", "tracing"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tower-sessions = "0.14.0"
tower-sessions-redis-store = "0.16.0"
tracing = "0.1.41"
tracing-journald = "0.3.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
two-face = { version = "0.4.3", default-features = false, features = [
    "syntect-fancy",
] }
unic-langid = { version = "0.9.5", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v1", "serde"] }
validify = "2.0.0"

[dev-dependencies]
notzero = "1.1.0"

[build-dependencies]
crate-git-revision = "0.0.6"

