[tool.poetry]
name = "quanweb"
version = "0.1.2"
description = "Quan's personal web blog"
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]
homepage = "http://quan.hoabinh.vn"

[tool.poetry.dependencies]
python = "^3.6"
Flask-Admin = "^1.5"
Flask-WTF = "^0.14.2"
Flask-Login = "^0.4.1"
Flask-Script = "^2.0"
Flask-Bootstrap = "^3.3"
blinker = "^1.4"
htmllaundry = "^2.2"
gunicorn = "^20.1.0"
awesome-slugify = "^1.6.5"
html3 = "^1.18"
Flask-SQLAlchemy = "^2.3"
flask-behind-proxy = "^0.1.0"
Babel = "^2.10.1"
mistletoe = "^0.8.2"
SQLAlchemy-Utils = "^0.38.2"
arrow = "^1.2.2"
alembic = "^1.7.7"
psycopg2-binary = "^2.9.3"
Pygments = "^2.12.0"
mdx-linkify = "^2.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
