[tool.poetry]
name = "quanweb"
version = "0.1.2"
description = "Quan's personal web blog"
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]
homepage = "http://quan.hoabinh.vn"

[tool.poetry.dependencies]
python = "^3.8"
Flask-Admin = "^1.6.0"
Flask-WTF = "^1.0.1"
Flask-Login = "^0.6.1"
Flask-Bootstrap = "^3.3"
blinker = "^1.4"
htmllaundry = "^2.2"
gunicorn = "^20.1.0"
awesome-slugify = "^1.6.5"
html3 = "^1.18"
Flask-SQLAlchemy = "^2.5.1"
flask-behind-proxy = "^0.1.1"
Babel = "^2.10.1"
mistletoe = "^0.8.2"
SQLAlchemy-Utils = "^0.38.2"
arrow = "^1.2.2"
alembic = "^1.7.7"
psycopg2-binary = "^2.9.3"
Pygments = "^2.12.0"
mdx-linkify = "^2.1"
Flask = "^2.1.2"
Markdown = "^3.3.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.272"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
